Dependency upgrade (#90)
* Dep update.

* Dep update.

* Dep update.

* Dep update.

* Tests passing.

* Clean up the warning.